Bug 1925092 - Use plural neutral format for tabs button content description. r=android-reviewers,npoon
Differential Revision: https://phabricator.services.mozilla.com/D225989

UltraBlame original commit: f7826cb222d4d0b487403bb367ca85770263ae2a

--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values/strings.xml
@@ -80,6 +80,38 @@ MPL
 >
 <
 resources
+xmlns
+:
+tools
+=
+"
+http
+:
+/
+/
+schemas
+.
+android
+.
+com
+/
+tools
+"
+xmlns
+:
+moz
+=
+"
+http
+:
+/
+/
+mozac
+.
+org
+/
+tools
+"
 >
 <
 !
@@ -107,6 +139,20 @@ name
 =
 "
 mozac_tab_counter_open_tab_tray_single
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 1
@@ -148,6 +194,20 @@ name
 =
 "
 mozac_tab_counter_open_tab_tray_plural
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 %
