no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 9cbdc10c6822886f78deab775084204b355286c6

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-cy/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-cy/strings.xml
@@ -4743,8 +4743,9 @@ Mae
 1
 s
 yn
-torri
-polis
+groes
+i
+bolis
 au
 Mozilla
 ac
@@ -4985,8 +4986,9 @@ Mae
 1
 s
 yn
-torri
-polis
+groes
+i
+bolis
 au
 Mozilla
 ac
@@ -6204,8 +6206,11 @@ wedi
 i
 rwystro
 am
-dorri
-polis
+fynd
+yn
+groes
+i
+bolis
 au
 Mozilla
 ac
@@ -6358,8 +6363,11 @@ wedi
 i
 gyfyngu
 am
-dorri
-polis
+fynd
+yn
+groes
+i
+bolis
 au
 Mozilla
 ac
