--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-oc/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-oc/strings.xml
@@ -4267,13 +4267,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4330,6 +4346,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4351,6 +4383,41 @@ d
 aquesta
 extension
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Impossible
+d
+installar
+l
+extension
 <
 /
 string
@@ -4631,6 +4698,20 @@ name
 =
 "
 mozac_feature_addons_blocklisted_1
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 %
@@ -5804,6 +5885,42 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Afichar
+los
+detalhs
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5845,6 +5962,20 @@ name
 =
 "
 mozac_feature_addons_status_blocklisted
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 %
