--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-vi/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-vi/strings.xml
@@ -5134,6 +5134,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Kh
 ng
@@ -5166,6 +5180,84 @@ b
 o
 m
 t
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+vi
+ph
+m
+ch
+nh
+s
+ch
+c
+a
+Mozilla
+v
+kh
+ng
+th
+c
+i
+t
+tr
+n
+%
+2
+s
 .
 <
 /
@@ -5313,6 +5405,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Kh
 ng
@@ -5334,6 +5440,85 @@ ch
 c
 a
 Mozilla
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+vi
+ph
+m
+ch
+nh
+s
+ch
+c
+a
+Mozilla
+v
+kh
+ng
+th
+c
+i
+t
+tr
+n
+%
+2
+s
 .
 <
 /
@@ -6518,6 +6703,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -6568,6 +6767,87 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Ti
+n
+ch
+m
+r
+ng
+n
+y
+b
+ch
+n
+do
+vi
+ph
+m
+ch
+nh
+s
+ch
+c
+a
+Mozilla
+v
+b
+v
+hi
+u
+h
+a
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -6581,6 +6861,20 @@ name
 =
 "
 mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Ti
@@ -6626,8 +6920,103 @@ n
 y
 c
 th
-g
+c
+r
+i
+ro
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Ti
+n
+ch
+m
+r
+ng
+n
 y
+b
+h
+n
+ch
+do
+vi
+ph
+m
+ch
+nh
+s
+ch
+c
+a
+Mozilla
+v
+b
+v
+hi
+u
+h
+a
+.
+B
+n
+c
+th
+k
+ch
+ho
+t
+n
+nh
+ng
+i
+u
+n
+y
+c
+th
+c
 r
 i
 ro
@@ -6707,8 +7096,7 @@ ng
 n
 c
 th
-g
-y
+c
 r
 i
 ro
