--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-dsb/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-dsb/strings.xml
@@ -120,6 +120,65 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+W
+cynjone
+rejtariki
+:
+%
+1
+s
+.
+P
+tusni
+o
+aby
+rejtariki
+p
+e
+altowa
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
