--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-hsb/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-hsb/strings.xml
@@ -124,6 +124,67 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+Wo
+injene
+rajtarki
+:
+%
+1
+s
+.
+Pod
+tk
+e
+so
+zo
+by
+e
+rajtarki
+p
+epina
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
