--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-sv-rSE/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-sv-rSE/strings.xml
@@ -116,6 +116,66 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+ppna
+flikar
+:
+%
+1
+s
+.
+Tryck
+h
+r
+f
+r
+att
+v
+xla
+mellan
+flikar
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
