--- a/mobile/android/fenix/app/src/main/res/values-cy/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-cy/strings.xml
@@ -5233,6 +5233,7 @@ browser_main_menu_handlebar_content_description
 "
 >
 Caewch
+ddalen
 y
 brif
 ddewislen
@@ -5274,8 +5275,8 @@ browser_extensions_menu_handlebar_content_description
 "
 >
 Caewch
-y
 ddalen
+y
 ddewislen
 estyniadau
 <
@@ -5316,10 +5317,10 @@ browser_save_menu_handlebar_content_description
 "
 >
 Caewch
-y
 ddalen
-dewislen
-arbed
+y
+ddewislen
+cadw
 <
 /
 string
@@ -5358,8 +5359,8 @@ browser_tools_menu_handlebar_content_description
 "
 >
 Caewch
+ddalen
 y
-daflen
 ddewislen
 offer
 <
@@ -5402,9 +5403,10 @@ browser_custom_tab_menu_handlebar_content_description
 >
 Caewch
 ddalen
+y
 ddewislen
-tab
-arferiad
+tabiau
+cyfaddas
 <
 /
 string
@@ -6555,7 +6557,7 @@ search_scan_button_2
 >
 Sganiwch
 y
-Cod
+cod
 QR
 <
 /
@@ -8652,7 +8654,7 @@ BrandUsage
 UnusedResources
 "
 >
-Addaswch
+Cyfaddaswch
 eich
 Firefox
 gydag
@@ -8697,7 +8699,7 @@ ignore
 UnusedResources
 "
 >
-Ychwanegu
+Ychwanegwch
 estyniadau
 trydydd
 parti
@@ -8759,8 +8761,9 @@ removedIn
 133
 "
 >
-Archwiliwch
-fwy
+Edrychwch
+ar
+ragor
 o
 estyniadau
 .
@@ -8811,8 +8814,8 @@ removedIn
 133
 "
 >
-Dechrau
-pori
+Dechreuwch
+bori
 .
 <
 /
@@ -8901,8 +8904,8 @@ ignore
 UnusedResources
 "
 >
-Cychwyn
-pori
+Dechreuwch
+bori
 <
 /
 string
@@ -8959,8 +8962,8 @@ ignore
 UnusedResources
 "
 >
-Tarddiad
 uBlock
+Origin
 <
 /
 string
@@ -9001,7 +9004,8 @@ ignore
 UnusedResources
 "
 >
-Rhwystro
+Yn
+rhwystro
 hysbysebion
 yn
 effeithiol
@@ -9066,9 +9070,8 @@ ignore
 UnusedResources
 "
 >
-Preifatrwydd
-Moch
-Daear
+Privacy
+Badger
 <
 /
 string
@@ -9112,8 +9115,8 @@ UnusedResources
 >
 Gwrth
 -
-olrhain
-gem
+olrheiniwr
+gwych
 .
 Stopiwch
 dracwyr
@@ -9228,8 +9231,9 @@ ignore
 UnusedResources
 "
 >
-Gweld
-llun
+Edrychwch
+ar
+lun
 diddorol
 a
 dysgu
@@ -9338,7 +9342,7 @@ UnusedResources
 >
 Modd
 tywyll
-personol
+cyfaddas
 ar
 gyfer
 y
@@ -21939,11 +21943,8 @@ UnusedResources
 "
 >
 Eitemau
-wedi
-\
-'
-u
-dileu
+dil
+wyd
 :
 %
 s
@@ -23824,13 +23825,13 @@ name
 preference_feature_desktop_mode_default
 "
 >
-Gofynnwch
+Gofyn
 am
 wefan
 bwrdd
 gwaith
 bob
-amser
+tro
 <
 /
 string
@@ -26484,23 +26485,12 @@ ignore
 UnusedResources
 "
 >
-Mae
+Cadwyd
 nodau
 tudalen
-wedi
-\
-'
-u
-cadw
 yn
-&
-quot
-;
 %
 s
-&
-quot
-;
 !
 <
 /
