--- a/mobile/android/fenix/app/src/main/res/values-dsb/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-dsb/strings.xml
@@ -3474,6 +3474,51 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+S
+o
+instal
+rowa
+roz
+yrjenja
+ale
+nic
+zm
+ni
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3541,6 +3586,82 @@ i
 a
 w
 stoty
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Aby
+roz
+yrjenja
+wu
+ywa
+zm
+ni
+o
+je
+w
+nastajenjach
+abo
+wubje
+o
+%
+s
+do
+ojce
 .
 <
 /
@@ -7161,13 +7282,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Pytnica
