--- a/mobile/android/fenix/app/src/main/res/values-en-rGB/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-en-rGB/strings.xml
@@ -3301,6 +3301,48 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+You
+have
+extensions
+installed
+but
+not
+enabled
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3355,6 +3397,77 @@ boosting
 privacy
 and
 safety
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+To
+use
+extensions
+enable
+them
+in
+settings
+or
+by
+selecting
+%
+s
+below
 .
 <
 /
@@ -6825,13 +6938,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 %
