--- a/mobile/android/fenix/app/src/main/res/values-es-rAR/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-es-rAR/strings.xml
@@ -9264,7 +9264,7 @@ una
 foto
 interesante
 y
-aprende
+aprend
 m
 s
 sobre
@@ -9327,8 +9327,8 @@ ignore
 UnusedResources
 "
 >
-Lector
-oscuro
+Dark
+Reader
 <
 /
 string
@@ -23933,9 +23933,9 @@ preference_feature_desktop_mode_default
 "
 >
 Siempre
-solicitar
-un
-sitio
+pedir
+versi
+n
 de
 escritorio
 <
@@ -26604,14 +26604,8 @@ UnusedResources
 Marcadores
 guardados
 en
-&
-quot
-;
 %
 s
-&
-quot
-;
 !
 <
 /
