--- a/mobile/android/fenix/app/src/main/res/values-hsb/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-hsb/strings.xml
@@ -3444,6 +3444,50 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+S
+e
+roz
+rjenja
+instalowa
+ale
+nic
+zm
+ni
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3506,6 +3550,82 @@ e
 a
 w
 stoty
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Zo
+by
+e
+roz
+rjenja
+wu
+iwa
+zm
+e
+je
+w
+nastajenjach
+abo
+wubjer
+e
+%
+s
+deleka
 .
 <
 /
@@ -7091,13 +7211,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Pytawa
