--- a/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
@@ -8752,15 +8752,14 @@ ignore
 UnusedResources
 "
 >
-Oglejte
-si
-zanimivo
-sliko
-in
-spoznajte
+Odkrijte
 ve
 o
-njej
+zanimivi
+sliki
+ko
+naletite
+nanjo
 .
 <
 /
