--- a/mobile/android/focus-android/app/src/main/res/values-pl/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-pl/strings.xml
@@ -1399,44 +1399,6 @@ dania
 string
 >
 <
-string
-name
-=
-"
-notification_erase_text_android_14
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Stuknij
-lub
-wyczy
-to
-powiadomienie
-aby
-bezpiecznie
-usun
-histori
-przegl
-dania
-.
-<
-/
-string
->
-<
 !
 -
 -
@@ -7034,6 +6996,20 @@ name
 =
 "
 onboarding_close_button_content_description
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Zamknij
@@ -13198,56 +13174,6 @@ string
 !
 -
 -
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-W
-czono
-tryb
-pe
-noekranowy
-<
-/
-string
->
-<
-!
--
--
 Preference
 for
 switching
@@ -16086,6 +16012,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Aby
 wy
@@ -16135,6 +16075,20 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Aby
 wy
@@ -16151,6 +16105,139 @@ i
 naci
 nij
 Wstecz
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Przeci
+gnij
+od
+g
+ry
+i
+u
+yj
+gestu
+Wstecz
+aby
+wyj
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Przeci
+gnij
+od
+g
+ry
+i
+naci
+nij
+Wstecz
+aby
+wyj
 <
 /
 string
