--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-gd/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-gd/strings.xml
@@ -4835,6 +4835,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Cha
 b
@@ -4861,6 +4875,77 @@ seasmhachd
 no
 t
 arainteachd
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+Tha
+%
+1
+s
+a
+briseadh
+poileasaidhean
+Mozilla
+is
+cha
+ghabh
+a
+st
+ladh
+air
+%
+2
+s
 .
 <
 /
@@ -4995,6 +5080,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Tha
 %
@@ -5010,6 +5109,78 @@ ghabh
 a
 st
 ladh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+Tha
+%
+1
+s
+a
+briseadh
+poileasaidhean
+Mozilla
+is
+cha
+ghabh
+a
+st
+ladh
+air
+%
+2
+s
 .
 <
 /
@@ -6157,6 +6328,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Chaidh
 %
@@ -6202,6 +6387,78 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Chaidh
+an
+leudachan
+seo
+a
+bhacadh
+a
+chionn
+s
+gun
+do
+bhris
+e
+poileasaidhean
+Mozilla
+agus
+chaidh
+a
+chur
+comas
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -6216,6 +6473,20 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Tha
 an
@@ -6223,6 +6494,85 @@ leudachan
 seo
 a
 briseadh
+poileasaidhean
+Mozilla
+s
+chaidh
+a
+chur
+comas
+.
+Is
+urrainn
+dhut
+a
+chur
+an
+comas
+ach
+dh
+fhaoidte
+gum
+bi
+sin
+cunnartach
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Chaidh
+an
+leudachan
+seo
+a
+chuingeachadh
+a
+chionn
+s
+gun
+do
+bhris
+e
 poileasaidhean
 Mozilla
 s
