--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-pl/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-pl/strings.xml
@@ -2552,7 +2552,7 @@ name
 mozac_feature_addons_optional_permissions_dialog_title
 "
 >
-Dodatek
+Rozszerzenie
 %
 1
 s
@@ -2625,8 +2625,8 @@ name
 mozac_feature_addons_permissions_dialog_subtitle
 "
 >
-Ten
-dodatek
+To
+rozszerzenie
 wymaga
 nast
 puj
@@ -2690,8 +2690,8 @@ name
 mozac_feature_addons_optional_permissions_dialog_subtitle
 "
 >
-Ten
-dodatek
+To
+rozszerzenie
 prosi
 o
 nadanie
@@ -2880,7 +2880,7 @@ mozac_feature_addons_install_addon_content_description_2
 "
 >
 Zainstaluj
-dodatek
+rozszerzenie
 %
 1
 s
@@ -4222,7 +4222,7 @@ mozac_feature_addons_successfully_installed
 "
 >
 Zainstalowano
-dodatek
+rozszerzenie
 %
 1
 s
@@ -4237,13 +4237,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4267,7 +4283,7 @@ mozac_feature_addons_failed_to_install
 "
 >
 Instalacja
-dodatku
+rozszerzenia
 %
 1
 s
@@ -4300,6 +4316,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4320,6 +4352,41 @@ nie
 powiod
 a
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Nie
+mo
+na
+zainstalowa
+rozszerzenia
 <
 /
 string
@@ -4532,7 +4599,7 @@ name
 mozac_feature_addons_failed_to_install_incompatible_error
 "
 >
-Dodatek
+Rozszerzenie
 %
 1
 s
@@ -4540,12 +4607,12 @@ nie
 mo
 e
 zosta
-zainstalowany
+zainstalowane
 poniewa
 nie
 jest
-on
-zgodny
+ono
+zgodne
 z
 aplikacj
 %
@@ -4595,8 +4662,22 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
-Dodatek
+Rozszerzenie
 %
 1
 s
@@ -4604,11 +4685,11 @@ nie
 mo
 e
 zosta
-zainstalowany
+zainstalowane
 poniewa
-obarczony
+obarczone
 jest
-on
+ono
 wysokim
 ryzykiem
 utraty
@@ -4620,6 +4701,77 @@ w
 z
 bezpiecze
 stwem
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+Rozszerzenie
+%
+1
+s
+narusza
+zasady
+Mozilli
+i
+nie
+mo
+na
+go
+instalowa
+w
+aplikacji
+%
+2
+s
 .
 <
 /
@@ -4675,7 +4827,7 @@ name
 mozac_feature_addons_admin_install_only
 "
 >
-Dodatek
+Rozszerzenie
 %
 1
 s
@@ -4683,11 +4835,11 @@ nie
 mo
 e
 zosta
-zainstalowany
+zainstalowane
 poniewa
 mo
 e
-go
+je
 instalowa
 wy
 cznie
@@ -4706,6 +4858,151 @@ ugiwane
 na
 tej
 platformie
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Rozszerzenie
+%
+1
+s
+narusza
+zasady
+Mozilli
+i
+nie
+mo
+na
+go
+instalowa
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+Rozszerzenie
+%
+1
+s
+narusza
+zasady
+Mozilli
+i
+nie
+mo
+na
+go
+instalowa
+w
+aplikacji
+%
+2
+s
 .
 <
 /
@@ -4748,7 +5045,7 @@ mozac_feature_addons_successfully_enabled
 >
 W
 czono
-dodatek
+rozszerzenie
 %
 1
 s
@@ -4794,7 +5091,7 @@ mozac_feature_addons_failed_to_enable
 >
 W
 czenie
-dodatku
+rozszerzenia
 %
 1
 s
@@ -4843,7 +5140,7 @@ mozac_feature_addons_successfully_disabled
 >
 Wy
 czono
-dodatek
+rozszerzenie
 %
 1
 s
@@ -4889,7 +5186,7 @@ mozac_feature_addons_failed_to_disable
 >
 Wy
 czenie
-dodatku
+rozszerzenia
 %
 1
 s
@@ -4937,7 +5234,7 @@ mozac_feature_addons_successfully_uninstalled
 "
 >
 Odinstalowano
-dodatek
+rozszerzenie
 %
 1
 s
@@ -4982,7 +5279,7 @@ mozac_feature_addons_failed_to_uninstall
 "
 >
 Odinstalowanie
-dodatku
+rozszerzenia
 %
 1
 s
@@ -5038,7 +5335,7 @@ UnusedResources
 >
 Usuni
 to
-dodatek
+rozszerzenie
 %
 1
 s
@@ -5091,7 +5388,7 @@ UnusedResources
 >
 Usuni
 cie
-dodatku
+rozszerzenia
 %
 1
 s
@@ -5667,7 +5964,7 @@ mozac_feature_addons_installed_dialog_description_2
 >
 Otw
 rz
-dodatek
+rozszerzenie
 %
 1
 s
@@ -5756,6 +6053,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Szczeg
+y
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5798,14 +6130,29 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
-Dodatek
+Rozszerzenie
 %
 1
 s
 zosta
+o
 wy
-czony
+czone
 z
 powodu
 problem
@@ -5816,6 +6163,286 @@ stwem
 lub
 stabilno
 ci
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+To
+rozszerzenie
+jest
+zablokowane
+z
+powodu
+naruszenia
+zasad
+Mozilli
+i
+zosta
+o
+wy
+czone
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+To
+rozszerzenie
+narusza
+zasady
+Mozilli
+i
+zosta
+o
+wy
+czone
+.
+Mo
+na
+je
+w
+czy
+ale
+mo
+e
+to
+by
+ryzykowne
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+To
+rozszerzenie
+jest
+ograniczone
+z
+powodu
+naruszania
+zasad
+Mozilli
+i
+zosta
+o
+wy
+czone
+.
+Mo
+na
+je
+w
+czy
+ale
+mo
+e
+to
+by
+ryzykowne
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+To
+rozszerzenie
+narusza
+zasady
+Mozilli
+.
+Korzystanie
+z
+niego
+mo
+e
+by
+ryzykowne
 .
 <
 /
@@ -5871,21 +6498,22 @@ name
 mozac_feature_addons_status_unsigned
 "
 >
-Dodatek
+Rozszerzenie
 %
 1
 s
 nie
-m
-g
+mog
+o
 zosta
-zweryfikowany
+zweryfikowane
 jako
-bezpieczny
+bezpieczne
 i
 zosta
+o
 wy
-czony
+czone
 .
 <
 /
@@ -5958,13 +6586,13 @@ name
 mozac_feature_addons_status_incompatible
 "
 >
-Dodatek
+Rozszerzenie
 %
 1
 s
 nie
 jest
-zgodny
+zgodne
 z
 u
 ywan
