--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-de/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-de/strings.xml
@@ -110,6 +110,61 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+Offene
+Tabs
+:
+%
+1
+s
+.
+Antippen
+um
+Tabs
+zu
+wechseln
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
