--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-en-rGB/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-en-rGB/strings.xml
@@ -108,6 +108,60 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+Tabs
+Open
+:
+%
+1
+s
+.
+Tap
+to
+switch
+tabs
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
