--- a/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
@@ -1984,77 +1984,6 @@ string
 name
 =
 "
-navbar_cfr_message
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Cr
-onaidh
-am
-b
-r
-seo
-air
-falbh
-is
-tu
-a
-sgroladh
-s
-os
-airson
-s
-gum
-bi
-barrachd
-ite
-agad
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-message
-displayed
-in
-the
-contextual
-feature
-recommendation
-popup
-promoting
-the
-navigation
-bar
-.
--
--
->
-<
-string
-name
-=
-"
 navbar_cfr_message_2
 "
 >
@@ -3860,63 +3789,6 @@ string
 !
 -
 -
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-:
-Label
-for
-plus
-icon
-used
-to
-add
-extensions
-.
--
--
->
-<
-string
-name
-=
-"
-browser_menu_extension_plus_icon_content_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Cuir
-leudachan
-ris
-<
-/
-string
->
-<
-!
--
--
 Browser
 menu
 button
@@ -5573,6 +5445,207 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+main
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_main_menu_handlebar_content_description
+"
+>
+An
+siota
+airson
+am
+pr
+omh
+-
+chl
+r
+-
+taice
+a
+dh
+nadh
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+extensions
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_extensions_menu_handlebar_content_description
+"
+>
+An
+siota
+airson
+cl
+r
+-
+taice
+nan
+leudachan
+a
+dh
+nadh
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+tools
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_tools_menu_handlebar_content_description
+"
+>
+An
+siota
+airson
+cl
+r
+-
+taice
+nan
+innealan
+a
+dh
+nadh
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+custom
+tab
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_custom_tab_menu_handlebar_content_description
+"
+>
+An
+siota
+airson
+cl
+r
+-
+taice
+nan
+tabaichean
+gn
+thaichte
+a
+dh
+nadh
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 description
@@ -6704,8 +6777,61 @@ name
 "
 search_scan_button
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Sganaich
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+search
+view
+that
+lets
+a
+user
+search
+by
+scanning
+a
+QR
+code
+-
+-
+>
+<
+string
+name
+=
+"
+search_scan_button_2
+"
+>
+Sganaich
+an
+c
+d
+QR
 <
 /
 string
@@ -7660,295 +7786,6 @@ string
 !
 -
 -
-Notification
-pre
--
-permission
-dialog
--
--
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-title
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_title
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-S
-urrainn
-dhut
-barrachd
-a
-dh
-anamh
-le
-%
-s
-ma
-bhios
-na
-brathan
-an
-comas
-agad
-<
-/
-string
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-description
-with
-rationale
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Sioncronaich
-na
-tabaichean
-agad
-eadar
-uidheaman
-sti
-irich
-na
-luchdaich
-thu
-a
--
-nuas
-is
-faigh
-gliocasan
-leis
-an
-cuir
-thu
-an
-d
-on
-pr
-obhaideachd
-a
-bheir
-%
-s
-dhut
-gu
-l
-n
--
-fheum
-is
-m
-ran
-a
-bharrachd
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-request
-notification
-permission
-on
-the
-device
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_positive_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Lean
-air
-adhart
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-not
-request
-notification
-permission
-on
-the
-device
-and
-dismiss
-the
-dialog
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_negative_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Chan
-ann
-an
--
-dr
-sta
-<
-/
-string
->
-<
-!
--
--
 Juno
 first
 user
@@ -8361,158 +8198,6 @@ string
 !
 -
 -
-Description
-for
-set
-firefox
-as
-default
-browser
-screen
-used
-by
-Nimbus
-experiments
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_nimbus_2
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Cuiridh
-am
-brabhsair
-againn
--
-fear
-nach
-eil
-airson
-prothaid
--
-casg
-air
-companaidhean
-o
-bhith
-gad
-leantainn
-gu
-d
-omhair
-air
-feadh
-an
-l
-n
-.
-\
-n
-\
-nFaigh
-barrachd
-fiosrachaidh
-san
-aithris
-phr
-obhaideachd
-againn
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-link
-to
-the
-privacy
-notice
-webpage
-for
-set
-as
-firefox
-default
-browser
-screen
-.
-This
-is
-part
-of
-the
-string
-with
-the
-key
-"
-juno_onboarding_default_browser_description
-"
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_link_text
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-aithris
-na
-pr
-obhaideachd
-<
-/
-string
->
-<
-!
--
--
 Text
 for
 the
@@ -8633,100 +8318,6 @@ o
 uidheam
 gu
 uidheam
-<
-/
-string
->
-<
-!
--
--
-Description
-for
-sign
-in
-to
-sync
-screen
-.
-Nimbus
-experiments
-do
-not
-support
-string
-placeholders
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_sign_in_description_2
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-BrandUsage
-UnusedResources
-"
->
-D
-an
-cl
-radh
-a
--
-steach
-is
-sioncronachadh
-is
-bidh
-thu
-nas
-s
-bhailte
-.
-Crioptaichidh
-Firefox
-na
-faclan
--
-faire
-comharran
--
-l
-n
-is
-m
-ran
-a
-bharrachd
-dhut
-.
 <
 /
 string
@@ -9383,6 +8974,777 @@ an
 -
 dr
 sta
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Nimbus
+experiments
+do
+not
+support
+string
+placeholders
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_header
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Gn
+thaich
+am
+Firefox
+agad
+le
+leudachain
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+sub
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_sub_header
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Cuir
+leudachain
+le
+treas
+-
+ph
+rtaidhean
+ris
+airson
+barrachd
+t
+arainteachd
+tarbhachd
+is
+m
+ran
+a
+bharrachd
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+R
+raich
+barrachd
+leudachan
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+T
+isich
+air
+brabhsadh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+R
+raich
+barrachd
+leudachan
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+T
+isich
+air
+brabhsadh
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Ublock
+Origin
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+uBlock
+Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Gu
+math
+ifeachdach
+airson
+sanasachd
+a
+bhacadh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Privacy
+Badger
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_privacy_badger_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Privacy
+Badger
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_privacy_badger_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Seud
+nan
+gleusan
+an
+aghaidh
+tracaidh
+.
+Cuir
+stad
+air
+tracaichean
+is
+sanasachd
+brathaidh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Search
+by
+Image
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Search
+by
+Image
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_search_by_image_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Lorg
+a
+-
+r
+ir
+deilbh
+<
+/
+string
+>
+<
+!
+-
+-
+Search
+by
+Image
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_search_by_image_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Faigh
+barrachd
+fiosrachaidh
+mu
+dhealbhan
+inntinneach
+a
+ch
+thu
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Dark
+Reader
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Dark
+Reader
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Dark
+Reader
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Modh
+dorcha
+gn
+thaichte
+airson
+an
+l
+n
+mhobile
+.
 <
 /
 string
@@ -10219,8 +10581,50 @@ name
 "
 preferences_site_permissions
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ceadan
+na
+l
+raich
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+advanced
+site
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_site_settings
+"
+>
+Roghainnean
 na
 l
 raich
@@ -11307,6 +11711,188 @@ string
 !
 -
 -
+Long
+text
+for
+a
+detail
+explanation
+indicating
+what
+will
+happen
+if
+cookie
+banner
+handling
+is
+on
+for
+a
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+The
+first
+parameter
+is
+the
+application
+name
+-
+-
+>
+<
+string
+name
+=
+"
+reduce_cookie_banner_details_panel_description_on_for_site_3
+"
+>
+Cuir
+air
+seo
+is
+n
+%
+1
+s
+a
+dh
+cheall
+airson
+gach
+bratach
+briosgaid
+a
+dhi
+ltadh
+gu
+f
+in
+-
+obrachail
+air
+an
+l
+rach
+seo
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+cookie
+banner
+re
+-
+engagement
+CFR
+the
+placeholder
+is
+replaced
+with
+app
+name
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_cfr_title
+"
+>
+Tha
+%
+1
+s
+air
+briosgaidean
+r
+-
+dhi
+ltadh
+dhut
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+for
+the
+cookie
+banner
+re
+-
+engagement
+CFR
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_cfr_message
+"
+>
+Nas
+lugha
+a
+briseadh
+a
+-
+steach
+ort
+nas
+lugha
+de
+bhriosgaidean
+gad
+thracadh
+air
+an
+l
+rach
+seo
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Description
 of
 the
@@ -11819,6 +12405,37 @@ preferences_accessibility
 So
 -
 ruigsinneachd
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+to
+override
+the
+Mozilla
+account
+server
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_override_account_server
+"
+>
+Frithealaiche
+cunntas
+Mozilla
+gn
+thaichte
 <
 /
 string
@@ -18808,53 +19425,6 @@ the
 menu
 button
 to
-rename
-a
-top
-site
--
--
->
-<
-string
-name
-=
-"
-rename_top_site
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Thoir
-ainm
-r
-air
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-menu
-button
-to
 remove
 a
 top
@@ -21151,55 +21721,6 @@ Cuir
 pasgan
 r
 ris
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-the
-bookmark
-navigation
-bar
-close
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-D
-in
-na
-comharran
--
-l
-n
 <
 /
 string
@@ -24652,222 +25173,6 @@ string
 -
 -
 Text
-for
-option
-one
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_0
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Neodrach
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-two
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_1
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Gl
-mh
--
-riaraichte
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-three
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-M
--
-riaraichte
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-four
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_3
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Riaraichte
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-five
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_4
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Gl
-riaraichte
-<
-/
-string
->
-<
-!
--
--
-Text
 shown
 in
 the
@@ -26322,60 +26627,6 @@ string
 !
 -
 -
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-A
-fosgladh
-modh
-na
-l
-n
--
-sgr
-n
-<
-/
-string
->
-<
-!
--
--
 Message
 for
 copying
@@ -27265,76 +27516,6 @@ tha
 ri
 sguabadh
 s
-<
-/
-string
->
-<
-!
--
--
-Body
-text
-of
-a
-delete
-browsing
-data
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-delete_history_prompt_body
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Bheir
-seo
-air
-falbh
-an
-eachdraidh
-(
-a
-gabhail
-a
--
-staigh
-eachdraidh
-a
-chaidh
-a
-shioncronachadh
-o
-uidheaman
-eile
-)
-briosgaidean
-is
-d
-ta
-brabhsaidh
-eile
-.
 <
 /
 string
@@ -29510,52 +29691,6 @@ string
 !
 -
 -
-Preference
-for
-enhanced
-tracking
-protection
-for
-the
-custom
-protection
-settings
--
--
->
-<
-string
-name
-=
-"
-preference_enhanced_tracking_protection_custom_fingerprinters
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Lorgaichean
--
-meur
-<
-/
-string
->
-<
-!
--
--
 Button
 label
 for
@@ -30037,119 +30172,6 @@ digiteach
 a
 mh
 innearachd
-.
-<
-/
-string
->
-<
-!
--
--
-Category
-of
-trackers
-(
-fingerprinters
-)
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_title
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Lorgaichean
--
-meur
-<
-/
-string
->
-<
-!
--
--
-Description
-of
-fingerprinters
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_description
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Cuiridh
-seo
-bacadh
-air
-cruinneachadh
-de
-dh
-ta
-raidh
-mun
-uidheam
-agad
-leis
-am
-b
-urrainnear
-do
-thracadh
 .
 <
 /
@@ -36643,54 +36665,6 @@ string
 !
 -
 -
-Button
-caption
-to
-confirm
-the
-renaming
-of
-the
-top
-site
-.
--
--
->
-<
-string
-name
-=
-"
-top_sites_rename_dialog_ok
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ceart
-ma
--
-th
-<
-/
-string
->
-<
-!
--
--
 Dialog
 button
 text
@@ -37519,20 +37493,6 @@ name
 =
 "
 action_bar_up_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Se
