--- a/mobile/android/fenix/app/src/main/res/values-hu/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-hu/strings.xml
@@ -1986,75 +1986,6 @@ string
 name
 =
 "
-navbar_cfr_message
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ez
-a
-s
-v
-elt
-nik
-ha
-lefel
-g
-rget
-tov
-bbi
-teret
-adva
-a
-b
-ng
-sz
-snek
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-message
-displayed
-in
-the
-contextual
-feature
-recommendation
-popup
-promoting
-the
-navigation
-bar
-.
--
--
->
-<
-string
-name
-=
-"
 navbar_cfr_message_2
 "
 >
@@ -3868,66 +3799,6 @@ z
 %
 1
 s
-hozz
-ad
-sa
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-:
-Label
-for
-plus
-icon
-used
-to
-add
-extensions
-.
--
--
->
-<
-string
-name
-=
-"
-browser_menu_extension_plus_icon_content_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Kieg
-sz
-t
 hozz
 ad
 sa
@@ -6715,6 +6586,20 @@ name
 "
 search_scan_button
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Beolvas
 s
@@ -7657,281 +7542,6 @@ string
 !
 -
 -
-Notification
-pre
--
-permission
-dialog
--
--
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-title
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_title
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Az
-rtes
-t
-sek
-seg
-ts
-g
-vel
-m
-g
-t
-bbet
-tehet
-a
-%
-s
-alkalmaz
-ssal
-<
-/
-string
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-description
-with
-rationale
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Szinkroniz
-lhatja
-lapjait
-az
-eszk
-z
-k
-k
-z
-tt
-kezelheti
-a
-let
-lt
-seket
-tippeket
-kaphat
-a
-%
-s
-adatv
-delmi
-funkci
-inak
-maxim
-lis
-kihaszn
-l
-s
-hoz
-stb
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-request
-notification
-permission
-on
-the
-device
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_positive_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Folytat
-s
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-not
-request
-notification
-permission
-on
-the
-device
-and
-dismiss
-the
-dialog
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_negative_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Most
-nem
-<
-/
-string
->
-<
-!
--
--
 Juno
 first
 user
@@ -8355,161 +7965,6 @@ string
 !
 -
 -
-Description
-for
-set
-firefox
-as
-default
-browser
-screen
-used
-by
-Nimbus
-experiments
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_nimbus_2
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-A
-nonprofit
-szervezet
-ltal
-t
-mogatott
-b
-ng
-sz
-nk
-seg
-t
-megakad
-lyozni
-hogy
-a
-c
-gek
-titokban
-nyomon
-k
-vess
-k
-nt
-az
-interneten
-.
-\
-n
-\
-nTov
-bbi
-inform
-ci
-k
-az
-adatv
-delmi
-nyilatkozatban
-tal
-lhat
-k
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-link
-to
-the
-privacy
-notice
-webpage
-for
-set
-as
-firefox
-default
-browser
-screen
-.
-This
-is
-part
-of
-the
-string
-with
-the
-key
-"
-juno_onboarding_default_browser_description
-"
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_link_text
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-adatv
-delmi
-nyilatkozatban
-<
-/
-string
->
-<
-!
--
--
 Text
 for
 the
@@ -8633,93 +8088,6 @@ z
 tt
 v
 lt
-<
-/
-string
->
-<
-!
--
--
-Description
-for
-sign
-in
-to
-sync
-screen
-.
-Nimbus
-experiments
-do
-not
-support
-string
-placeholders
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_sign_in_description_2
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-BrandUsage
-UnusedResources
-"
->
-Ha
-be
-van
-jelentkezve
-s
-szinkroniz
-lva
-van
-akkor
-nagyobb
-biztons
-gban
-van
-.
-A
-Firefox
-titkos
-tja
-a
-jelszavait
-k
-nyvjelz
-it
-s
-egyebeit
-.
 <
 /
 string
@@ -10211,6 +9579,20 @@ name
 =
 "
 preferences_site_permissions
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Webhely
@@ -20259,51 +19641,6 @@ the
 menu
 button
 to
-rename
-a
-top
-site
--
--
->
-<
-string
-name
-=
-"
-rename_top_site
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-tnevez
-s
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-menu
-button
-to
 remove
 a
 top
@@ -22574,54 +21911,6 @@ j
 mappa
 hozz
 ad
-sa
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-the
-bookmark
-navigation
-bar
-close
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-K
-nyvjelz
-k
-bez
-r
 sa
 <
 /
@@ -26106,222 +25395,6 @@ string
 -
 -
 Text
-for
-option
-one
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_0
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Semleges
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-two
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_1
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Nagyon
-el
-gedetlen
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-three
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-El
-gedetlen
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-four
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_3
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-El
-gedett
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-five
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_4
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Nagyon
-el
-gedett
-<
-/
-string
->
-<
-!
--
--
-Text
 shown
 in
 the
@@ -27752,60 +26825,6 @@ string
 !
 -
 -
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Bel
-p
-s
-teljes
-k
-perny
-s
-m
-dba
-<
-/
-string
->
-<
-!
--
--
 Message
 for
 copying
@@ -28654,84 +27673,6 @@ rlend
 id
 tartom
 ny
-<
-/
-string
->
-<
-!
--
--
-Body
-text
-of
-a
-delete
-browsing
-data
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-delete_history_prompt_body
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Elt
-vol
-tja
-az
-el
-zm
-nyeket
-(
-bele
-rtve
-a
-m
-s
-eszk
-z
-kr
-l
-szinkroniz
-lt
-el
-zm
-nyeket
-)
-a
-s
-tiket
-s
-az
-egy
-b
-b
-ng
-sz
-si
-adatokat
-.
 <
 /
 string
@@ -30986,55 +29927,6 @@ string
 name
 =
 "
-preference_enhanced_tracking_protection_custom_fingerprinters
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ujjlenyomat
--
-k
-sz
-t
-k
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-enhanced
-tracking
-protection
-for
-the
-custom
-protection
-settings
--
--
->
-<
-string
-name
-=
-"
 preference_enhanced_tracking_protection_custom_known_fingerprinters
 "
 >
@@ -31566,131 +30458,6 @@ az
 eszk
 z
 t
-.
-<
-/
-string
->
-<
-!
--
--
-Category
-of
-trackers
-(
-fingerprinters
-)
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_title
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ujjlenyomat
--
-k
-sz
-t
-k
-<
-/
-string
->
-<
-!
--
--
-Description
-of
-fingerprinters
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_description
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Meg
-ll
-tja
-az
-egyedileg
-azonos
-that
-adatok
-gy
-jt
-s
-t
-az
-eszk
-z
-r
-l
-amelyek
-nyomk
-vet
-si
-c
-lokra
-haszn
-lhat
-k
-fel
 .
 <
 /
@@ -33266,8 +32033,7 @@ name
 preferences_passwords_save_logins_never_save
 "
 >
-Soha
-ne
+Sose
 mentse
 <
 /
@@ -40091,51 +38857,6 @@ string
 !
 -
 -
-Button
-caption
-to
-confirm
-the
-renaming
-of
-the
-top
-site
-.
--
--
->
-<
-string
-name
-=
-"
-top_sites_rename_dialog_ok
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Rendben
-<
-/
-string
->
-<
-!
--
--
 Dialog
 button
 text
@@ -41153,20 +39874,6 @@ name
 =
 "
 action_bar_up_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Navig
@@ -44903,116 +43610,6 @@ string
 name
 =
 "
-review_quality_check_contextual_onboarding_caption_3
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Az
-Igen
-kipr
-b
-lom
-kiv
-laszt
-s
-val
-elfogadja
-a
-k
-vetkez
-ket
-:
-a
-%
-1
-s
-%
-2
-s
-s
-a
-%
-3
-s
-%
-4
-s
-.
-<
-/
-string
->
-<
-!
--
--
-Caption
-text
-to
-be
-displayed
-in
-review
-quality
-check
-contextual
-onboarding
-card
-above
-the
-opt
--
-in
-button
-.
-First
-parameter
-is
-Firefox
-app
-name
-third
-parameter
-is
-the
-Fakespot
-product
-name
-.
-Second
-&
-fourth
-are
-for
-clickable
-texts
-defined
-in
-review_quality_check_contextual_onboarding_privacy_policy_3
-and
-review_quality_check_contextual_onboarding_terms_use
-.
--
--
->
-<
-string
-name
-=
-"
 review_quality_check_contextual_onboarding_caption_4
 "
 >
@@ -45464,53 +44061,6 @@ ellen
 rz
 megnyit
 sa
-<
-/
-string
->
-<
-!
--
--
-Flag
-showing
-that
-the
-review
-quality
-check
-feature
-is
-work
-in
-progress
-.
--
--
->
-<
-string
-name
-=
-"
-review_quality_check_beta_flag
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Beta
 <
 /
 string
@@ -48014,8 +46564,7 @@ name
 translation_option_bottom_sheet_never_translate_in_language
 "
 >
-Soha
-ne
+Sose
 ford
 tsa
 ezt
@@ -48550,11 +47099,14 @@ nyelvek
 let
 lt
 se
-minidig
+akkor
+is
+ha
 adattakar
 kos
 m
 dban
+van
 <
 /
 string
@@ -48721,8 +47273,7 @@ name
 translation_settings_automatic_never_translate_sites
 "
 >
-Soha
-ne
+Sose
 ford
 tsa
 ezeket
@@ -49658,52 +48209,6 @@ preference
 screen
 -
 -
->
-<
-!
--
--
-Title
-of
-the
-download
-languages
-preference
-screen
-toolbar
-.
--
--
->
-<
-string
-name
-=
-"
-download_languages_toolbar_title_preference
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Nyelvek
-let
-lt
-se
-<
-/
-string
 >
 <
 !
@@ -51014,190 +49519,6 @@ delete_language_file_dialog_negative_button_text
 >
 M
 gse
-<
-/
-string
->
-<
-!
--
--
-Title
-for
-the
-dialog
-used
-by
-the
-translations
-feature
-to
-confirm
-canceling
-a
-download
-in
-progress
-for
-a
-language
-file
-.
-The
-first
-parameter
-is
-the
-name
-of
-the
-language
-for
-example
-"
-Spanish
-"
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_dialog_title
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Megszak
-tja
-a
-let
-lt
-st
-:
-%
-1
-s
-?
-<
-/
-string
->
-<
-!
--
--
-Button
-text
-on
-the
-dialog
-used
-by
-the
-translations
-feature
-confirms
-canceling
-a
-download
-in
-progress
-for
-a
-language
-file
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_dialog_positive_button_text
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Igen
-<
-/
-string
->
-<
-!
--
--
-Button
-text
-on
-the
-dialog
-used
-by
-the
-translations
-feature
-to
-dismiss
-the
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_negative_button_text
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Nem
 <
 /
 string
@@ -52916,69 +51237,6 @@ shown
 in
 prompt
 for
-homepage
-microsurvey
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_prompt_homepage_title
-"
-tools
-:
-ignore
-=
-"
-BrandUsage
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Mennyire
-el
-gedett
-a
-Firefox
-kezd
-lapj
-val
-?
-<
-/
-string
->
-<
-!
--
--
-Text
-shown
-in
-prompt
-for
 printing
 microsurvey
 .
@@ -53506,61 +51764,6 @@ r
 s
 funkci
 ikonja
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-for
-opening
-microsurvey
-bottom
-sheet
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_open_handle_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-K
-rd
-v
-megnyit
-sa
 <
 /
 string
