--- a/mobile/android/fenix/app/src/main/res/values-oc/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-oc/strings.xml
@@ -1653,6 +1653,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 N
 stra
@@ -1703,6 +1717,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Ne
@@ -1849,71 +1877,6 @@ sist
 ma
 de
 navegacion
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-message
-displayed
-in
-the
-contextual
-feature
-recommendation
-popup
-promoting
-the
-navigation
-bar
-.
--
--
->
-<
-string
-name
-=
-"
-navbar_cfr_message
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Aquesta
-barra
-s
-amaga
-quand
-vos
-despla
-atz
-enb
-s
-per
-ganhar
-d
-espaci
-suplementari
-.
 <
 /
 string
@@ -3630,7 +3593,23 @@ icon
 used
 to
 add
-extensions
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
 .
 -
 -
@@ -3640,12 +3619,13 @@ string
 name
 =
 "
-browser_menu_extension_plus_icon_content_description
+browser_menu_extension_plus_icon_content_description_2
 "
 >
 Apondre
-l
-extension
+%
+1
+s
 <
 /
 string
@@ -6285,8 +6265,61 @@ name
 "
 search_scan_button
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Numerizar
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+search
+view
+that
+lets
+a
+user
+search
+by
+scanning
+a
+QR
+code
+-
+-
+>
+<
+string
+name
+=
+"
+search_scan_button_2
+"
+>
+Numerizar
+un
+c
+di
+QR
 <
 /
 string
@@ -7185,273 +7218,6 @@ string
 !
 -
 -
-Notification
-pre
--
-permission
-dialog
--
--
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-title
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_title
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Las
-notificacions
-vos
-ajudan
-a
-ne
-far
-mai
-amb
-%
-s
-<
-/
-string
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-description
-with
-rationale
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Sincronizar
-los
-onglets
-entre
-v
-stres
-aparelhs
-geriss
-tz
-los
-telecargaments
-obten
-tz
-de
-conselhs
-per
-trapar
-melhor
-de
-la
-proteccion
-de
-la
-vida
-privada
-de
-%
-s
-e
-encara
-mai
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-request
-notification
-permission
-on
-the
-device
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_positive_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Contunhar
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-not
-request
-notification
-permission
-on
-the
-device
-and
-dismiss
-the
-dialog
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_negative_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Mai
-tard
-<
-/
-string
->
-<
-!
--
--
 Juno
 first
 user
@@ -7854,153 +7620,6 @@ string
 !
 -
 -
-Description
-for
-set
-firefox
-as
-default
-browser
-screen
-used
-by
-Nimbus
-experiments
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_nimbus_2
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-N
-stre
-navegador
-sostengut
-per
-una
-organizacion
-sens
-but
-lucratiu
-empacha
-las
-entrepresas
-de
-vos
-seguir
-secr
-tament
-sul
-Web
-.
-\
-n
-\
-nPer
-ne
-saber
-mai
-consultatz
-n
-stra
-politica
-de
-confidencialitat
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-link
-to
-the
-privacy
-notice
-webpage
-for
-set
-as
-firefox
-default
-browser
-screen
-.
-This
-is
-part
-of
-the
-string
-with
-the
-key
-"
-juno_onboarding_default_browser_description
-"
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_link_text
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-politica
-de
-confidencialitat
-<
-/
-string
->
-<
-!
--
--
 Text
 for
 the
@@ -8117,92 +7736,6 @@ quand
 basculatz
 d
 aparelh
-<
-/
-string
->
-<
-!
--
--
-Description
-for
-sign
-in
-to
-sync
-screen
-.
-Nimbus
-experiments
-do
-not
-support
-string
-placeholders
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_sign_in_description_2
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-BrandUsage
-UnusedResources
-"
->
-Quand
-vos
-connectatz
-e
-activatz
-la
-sincronizacion
-v
-stra
-seguretat
-es
-renfortida
-.
-Firefox
-chifra
-v
-stres
-senhals
-marcapaginas
-e
-encara
-mai
-de
-causas
-.
 <
 /
 string
@@ -8835,6 +8368,442 @@ UnusedResources
 >
 Pas
 ara
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+Exploratz
+d
+autras
+extensions
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+Comen
+ar
+de
+navegar
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Exploratz
+d
+autras
+extensions
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Comen
+ar
+de
+navegar
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Ublock
+Origin
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+uBlock
+Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Privacy
+Badger
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_privacy_badger_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Privacy
+Badger
+<
+/
+string
+>
+<
+!
+-
+-
+Search
+by
+Image
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Search
+by
+Image
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_search_by_image_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Cercar
+per
+imatge
+<
+/
+string
+>
+<
+!
+-
+-
+Dark
+Reader
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Dark
+Reader
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Dark
+Reader
 <
 /
 string
@@ -9666,8 +9635,50 @@ name
 "
 preferences_site_permissions
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Autorizacions
+de
+site
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+advanced
+site
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_site_settings
+"
+>
+Param
+tres
 de
 site
 <
@@ -19249,50 +19260,6 @@ the
 menu
 button
 to
-rename
-a
-top
-site
--
--
->
-<
-string
-name
-=
-"
-rename_top_site
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Renommar
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-menu
-button
-to
 remove
 a
 top
@@ -20169,6 +20136,50 @@ string
 Unsubmitted
 crash
 dialog
+title
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+(
+e
+.
+g
+.
+Firefox
+)
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_title
+"
+>
+%
+s
+a
+degut
+reaviar
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
 negative
 button
 to
@@ -20496,6 +20507,31 @@ edit_bookmark_snackbar_action
 "
 >
 MODIFICAR
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
+menu
+move
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_menu_move_button
+"
+>
+Despla
+ar
 <
 /
 string
@@ -21309,6 +21345,46 @@ string
 !
 -
 -
+Bookmark
+snackbar
+message
+for
+deleting
+a
+single
+item
+.
+Parameter
+is
+the
+title
+of
+the
+item
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_single_item
+"
+>
+%
+s
+suprimit
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
@@ -21400,51 +21476,6 @@ dossi
 r
 nov
 l
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-the
-bookmark
-navigation
-bar
-close
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Tampar
-los
-marcapaginas
 <
 /
 string
@@ -21551,6 +21582,80 @@ de
 marcapagina
 pel
 moment
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+button
+to
+navigate
+to
+sync
+authentication
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_cta
+"
+>
+Se
+connectar
+a
+Sync
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+add
+new
+folder
+button
+when
+selecting
+a
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_select_folder_new_folder_button_title
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Dossi
+r
+nov
+l
 <
 /
 string
@@ -22900,6 +23005,122 @@ studies_off
 "
 >
 Desactivat
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+permissions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_permissions
+"
+>
+Permissions
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+content
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_content
+"
+>
+Contengut
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+default
+browsing
+mode
+.
+When
+enabled
+the
+desktop
+site
+will
+always
+be
+requested
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_feature_desktop_mode_default
+"
+>
+Totjorn
+demandar
+la
+version
+ordenador
 <
 /
 string
@@ -24638,218 +24859,6 @@ string
 -
 -
 Text
-for
-option
-one
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_0
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Indiferent
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-two
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_1
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Plan
-insatisfach
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-three
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Insatisfach
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-four
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_3
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Satisfach
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-five
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_4
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Plan
-satisfach
-<
-/
-string
->
-<
-!
--
--
-Text
 shown
 in
 the
@@ -25735,6 +25744,66 @@ in
 snackbar
 when
 user
+bookmarks
+a
+list
+of
+tabs
+.
+Parameter
+will
+be
+replaced
+by
+the
+name
+of
+the
+folder
+the
+bookmark
+was
+saved
+into
+.
+-
+-
+>
+<
+string
+name
+=
+"
+snackbar_message_bookmarks_saved_in
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Marcapagina
+salvat
+dins
+%
+s
+!
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+snackbar
+when
+user
 adds
 a
 site
@@ -26193,56 +26262,6 @@ tab_collection_dialog_positive
 "
 >
 Suprimir
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-M
-de
-plen
-ecran
-actiu
 <
 /
 string
@@ -27070,70 +27089,6 @@ Peri
 de
 de
 suprimir
-<
-/
-string
->
-<
-!
--
--
-Body
-text
-of
-a
-delete
-browsing
-data
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-delete_history_prompt_body
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Suprim
-s
-l
-istoric
-(
-inclutz
-l
-istoric
-sincronizat
-d
-autres
-aparelhs
-)
-los
-cookies
-e
-las
-autras
-donadas
-de
-navegacion
-.
 <
 /
 string
@@ -29282,53 +29237,6 @@ string
 name
 =
 "
-preference_enhanced_tracking_protection_custom_fingerprinters
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Generadors
-d
-emprentas
-numericas
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-enhanced
-tracking
-protection
-for
-the
-custom
-protection
-settings
--
--
->
-<
-string
-name
-=
-"
 preference_enhanced_tracking_protection_custom_known_fingerprinters
 "
 >
@@ -29806,121 +29714,6 @@ minar
 de
 moneda
 numerica
-.
-<
-/
-string
->
-<
-!
--
--
-Category
-of
-trackers
-(
-fingerprinters
-)
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_title
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Generadors
-d
-emprentas
-numericas
-<
-/
-string
->
-<
-!
--
--
-Description
-of
-fingerprinters
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_description
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Empacha
-la
-culhida
-de
-donadas
-unicas
-identificables
-quant
-a
-v
-stre
-periferic
-que
-p
-don
-sser
-utilizadas
-pel
-seguiment
 .
 <
 /
@@ -38030,53 +37823,6 @@ string
 !
 -
 -
-Button
-caption
-to
-confirm
-the
-renaming
-of
-the
-top
-site
-.
--
--
->
-<
-string
-name
-=
-"
-top_sites_rename_dialog_ok
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-D
-ac
-rdi
-<
-/
-string
->
-<
-!
--
--
 Dialog
 button
 text
@@ -39053,20 +38799,6 @@ name
 =
 "
 action_bar_up_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Remontar
@@ -42501,110 +42233,6 @@ string
 name
 =
 "
-review_quality_check_contextual_onboarding_caption_3
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-En
-seleccionant
-c
--
-ben
-ensajar
-acceptatz
-la
-%
-2
-s
-de
-%
-1
-s
-e
-la
-%
-4
-s
-de
-%
-3
-s
-.
-<
-/
-string
->
-<
-!
--
--
-Caption
-text
-to
-be
-displayed
-in
-review
-quality
-check
-contextual
-onboarding
-card
-above
-the
-opt
--
-in
-button
-.
-First
-parameter
-is
-Firefox
-app
-name
-third
-parameter
-is
-the
-Fakespot
-product
-name
-.
-Second
-&
-fourth
-are
-for
-clickable
-texts
-defined
-in
-review_quality_check_contextual_onboarding_privacy_policy_3
-and
-review_quality_check_contextual_onboarding_terms_use
-.
--
--
->
-<
-string
-name
-=
-"
 review_quality_check_contextual_onboarding_caption_4
 "
 >
@@ -42816,6 +42444,20 @@ name
 "
 review_quality_check_first_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Verificatz
 se
@@ -42869,6 +42511,13 @@ name
 "
 review_quality_check_first_cfr_action
 "
+moz
+:
+removedIn
+=
+"
+132
+"
 tools
 :
 ignore
@@ -42911,6 +42560,20 @@ name
 =
 "
 review_quality_check_second_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Aquestes
@@ -42966,6 +42629,13 @@ name
 "
 review_quality_check_second_cfr_action
 "
+moz
+:
+removedIn
+=
+"
+132
+"
 tools
 :
 ignore
@@ -42979,53 +42649,6 @@ lo
 verificador
 d
 avises
-<
-/
-string
->
-<
-!
--
--
-Flag
-showing
-that
-the
-review
-quality
-check
-feature
-is
-work
-in
-progress
-.
--
--
->
-<
-string
-name
-=
-"
-review_quality_check_beta_flag
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Beta
 <
 /
 string
@@ -47037,51 +46660,6 @@ screen
 Title
 of
 the
-download
-languages
-preference
-screen
-toolbar
-.
--
--
->
-<
-string
-name
-=
-"
-download_languages_toolbar_title_preference
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Telecargar
-de
-lengas
-<
-/
-string
->
-<
-!
--
--
-Title
-of
-the
 toolbar
 for
 the
@@ -48314,187 +47892,6 @@ delete_language_file_dialog_negative_button_text
 "
 >
 Anullar
-<
-/
-string
->
-<
-!
--
--
-Title
-for
-the
-dialog
-used
-by
-the
-translations
-feature
-to
-confirm
-canceling
-a
-download
-in
-progress
-for
-a
-language
-file
-.
-The
-first
-parameter
-is
-the
-name
-of
-the
-language
-for
-example
-"
-Spanish
-"
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_dialog_title
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Anullar
-lo
-telecargament
-de
-%
-1
-s
-?
-<
-/
-string
->
-<
-!
--
--
-Button
-text
-on
-the
-dialog
-used
-by
-the
-translations
-feature
-confirms
-canceling
-a
-download
-in
-progress
-for
-a
-language
-file
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_dialog_positive_button_text
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-c
-<
-/
-string
->
-<
-!
--
--
-Button
-text
-on
-the
-dialog
-used
-by
-the
-translations
-feature
-to
-dismiss
-the
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_negative_button_text
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Non
 <
 /
 string
@@ -50080,13 +49477,10 @@ string
 !
 -
 -
-Text
-shown
-in
-prompt
+Option
 for
-homepage
-microsurvey
+likert
+scale
 .
 Note
 :
@@ -50108,7 +49502,7 @@ string
 name
 =
 "
-microsurvey_prompt_homepage_title
+likert_scale_option_7
 "
 tools
 :
@@ -50118,26 +49512,14 @@ ignore
 BrandUsage
 UnusedResources
 "
-moz
-:
-removedIn
-=
-"
-130
-"
 >
-S
-tz
-satisfach
-de
-v
-stra
-pagina
-d
-acu
-lh
+Utilizi
+pas
+la
+rec
+rca
+amb
 Firefox
-?
 <
 /
 string
@@ -50422,59 +49804,6 @@ de
 la
 foncion
 de
-sondatge
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-for
-opening
-microsurvey
-bottom
-sheet
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_open_handle_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Dobrir
-lo
 sondatge
 <
 /
