--- a/mobile/android/fenix/app/src/main/res/values-sv-rSE/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sv-rSE/strings.xml
@@ -3375,6 +3375,49 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+Du
+har
+till
+gg
+installerade
+men
+inte
+aktiverade
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3436,6 +3479,84 @@ sekretess
 och
 s
 kerhet
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+F
+r
+att
+anv
+nda
+till
+gg
+aktivera
+dem
+i
+inst
+llningar
+eller
+genom
+att
+v
+lja
+%
+s
+nedan
 .
 <
 /
@@ -6983,13 +7104,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 S
