Bug 1924192 - Create mochitest-browser-translations test definition r=translations-reviewers,jmaher,sparky,gregtatum
Splits browser-translations mochitests into their own Treeherder group
with the label `tr8ns`.

Depends on D225983

Differential Revision: https://phabricator.services.mozilla.com/D225414

UltraBlame original commit: 7161afe20737cba9767f4acf90cb70968dac24e9

--- a/browser/components/translations/tests/browser/browser.toml
+++ b/browser/components/translations/tests/browser/browser.toml
@@ -1,6 +1,11 @@
 [
 DEFAULT
 ]
+subsuite
+=
+"
+translations
+"
 support
 -
 files
@@ -356,6 +361,13 @@ js
 [
 "
 browser_translations_full_page_panel_switch_tabs_before_engine_ready
+.
+js
+"
+]
+[
+"
+browser_translations_full_page_panel_target_language_persists_on_reopen
 .
 js
 "
